--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 
     <h1 class="frase">Diva Regia y Costosa</h1>
+    <h2>Los Más Vendidos</h2>
 
-
-    <section>
-        <h1>Los Más Vendidos</h1>
+    <section class= "lomasVendido">
+       
         <a href="./secciones/productos.html">
             <img class="musculosaHombrera" src="./imagenes/musculosa hombreras.jpeg" alt="musculosahombreras">
         </a>
