flex lista secciones grid cabeza

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <header>
+    <header class= "cabeza">
         <img class="logoSansa" src="./imagenes/logo.jpeg" alt="logo" href="index.html">
 
         <!--Lista Ordenadas con enlaces relativos 
         genero navegabilidad-->
         <nav>
-            <ul>
+            <ul class= "listaSecciones">
                 <li><a href="index.html">INICIO</a>
                 </li>
                 <li><a href="./secciones/productos.html">PRODUCTOS</a>
