--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -37,7 +37,7 @@
     <section>
 
         <h2> Vestidos</h2>
-<div class="vestido">
+<div class="galeriaProductos">
         <img class="vestidoLali" src="./imgproductos/vestido lali.jpeg" alt="vestidolali"> <br>
         
         <img class="vestidoMandy" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy"> <br>
