--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <header>
+    <header class= "cabeza">
         <a href="../index.html">
             <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
         </a>
 
 
         <nav>
-            <ul>
+            <ul class="listaSecciones">
                 <li><a href="../index.html">INICIO</a>
                 </li>
                 <li><a href="../secciones/productos.html">PRODUCTOS</a>
