agregando texto e imagen en compra

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class= "cabeza">
         <a href="../index.html">
             <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
         </a>
