--- a/secciones/comprar.html
+++ b/secciones/comprar.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabeza">
         <a href="../index.html">
             <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
         </a>
@@ -36,8 +36,68 @@
 
     <section>
         <h2>Como podes realizar la compra?</h2>
-        <p>Para hacer una compra, podes enviarnos un mensaje por instagram o whatsapp</p>
+        <p>1. Desde Internet Explorer, Google Chrome, Mozilla Firefox, Opera, o el navegador que prefiera,
+            ingrese a la tienda en la que desea comprar.
+            Tenga en cuenta la sección de “Registro” pues la mayoría de tiendas le piden este paso para que pueda
+            iniciar el proceso.
+            Es fácil y podrá beneficiarse con las notificaciones de ofertas y novedades de la tienda que llegarán a su
+            correo electrónico.
 
+            <img class="navegadores" src="./imagenes/navegadores.jpg" alt="navegadores"> <br>
+
+            <p> 2. Asegúrese de cuál es la forma de pago que va a usar para realizar la transacción (ver recuadro
+                ‘Formas de pago’).
+            </p>
+            <p> 3. Inicie la búsqueda de los artículos que desea comprar. Ya sea navegando las secciones de la tienda
+                (Ropa, Zapatos, Tecnología, Hogar, etc.) o usando un término específico en el buscador de la página.
+            </p>
+            <p> 4. A medida que encuentre los productos, verá que en cada uno tiene la posibilidad de dar clic en el
+                botón “Agregar al carro”, “Añadir al carrito” o “Agregar a la bolsa”. Hasta aquí solo ha seleccionado lo
+                que le gusta y puede hacer cambios, eliminar un producto del carrito o agregar otros más.
+            </p>
+            Por lo general, los productos que usted agregue al carro de compras permanecen allí por 24 horas. Después de
+            ese tiempo podrían desaparecer del inventario. Esté muy atento si se trata de una oferta que dura un solo
+            día para que no pierda la oportunidad.
+
+            <p> 5. Al terminar de escoger y una vez tenga la plena seguridad de que ha conseguido lo que buscaba, puede
+                pagar. Usualmente, al final de la lista de productos de su carro de compras se puede ver un botón de
+                “Pagar”. En este paso deberá llenar un formulario con información personal: nombre, número de documento
+                de identidad, dirección, datos para el envío, datos de facturación.
+            </p>
+            <p> En ese formulario o en la siguiente página, tendrá que ingresar los datos de su tarjeta de crédito o le
+                dirán qué debe hacer de acuerdo al modo de pago que haya elegido (en efectivo, con débito, con tarjeta
+                crédito del almacén, etc.). Allí sabrá el total de su compra y los costos de envío. También es probable
+                que la empresa aliada que se encarga del envío ofrezca un número de guía para que usted ingrese a la
+                página, sepa el recorrido de la caja y el tiempo aproximado que tardará en tener los artículos en sus
+                manos.
+
+                Al finalizar la transacción el sistema le anunciará que fue realizada con éxito y solo deberá esperar la
+                llegada del pedido a su casa u oficina.
+
+                Formas de pago
+
+                Pago en efectivo: es posible pagar en efectivo en una entidad bancaria con un pin asociado a la compra y
+                que genera el sistema. Algunas tiendas permiten pagos iniciales para separar el producto y el resto lo
+                cobran una vez se entrega el pedido.
+
+                Con tarjeta del almacén: La mayoría de tiendas ofrecen sus propias tarjetas, como Falabella y Éxito, con
+                las que puede obtener descuentos y beneficios especiales.
+
+                Con tarjeta de crédito: por lo general encontrará que todas las tarjetas se aceptan, Diners, American
+                Express, Visa o Mastercard.
+
+                Con cheque: aunque el uso de cheques es cada vez menos común, almacenes como éxito.com usan este medio
+                en su ‘Plan Separe’, con cheques posfechados.
+
+                Tarjeta débito: es similar al pago en efectivo, la ventaja es que puede hacerlo en línea. Recuerde que
+                para procesar la transacción usted debe digitar su número de clave principal. Algunos bancos exigen que
+                se digite una “segunda clave” que la misma entidad se encarga de darle para este tipo de transacciones.
+                Los riesgos, como en un cajero automático radican, por ejemplo, en que alguien vea la clave. También
+                deberá prestar mucha atención para que no ingrese a una página falsa.
+
+                Tenga en cuenta estos cuidados y se dará cuenta que comprar en línea es un método confiable y rápido
+                para que obtener esos productos que tanto quiere.</p>
+        </p>
 
     </section>
 
@@ -46,12 +106,12 @@
 <h2>SANSA BS AS</h2>
 <nav>
     <ul>
-        
+
         <li><a href="../secciones/nosotros.html">NOSOTROS</a>
         </li>
         <li><a href="./secciones/contacto.html">CONTACTO</a>
         </li>
-       
+
     </ul>
 </nav>
 </footer>
