mapa y animacion titulos

--- a/secciones/comprar.html
+++ b/secciones/comprar.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <title>SANSAWEBSITE</title>
 </head>
 
 <body>
@@ -36,7 +38,7 @@
 
     <section>
         <h2>Como podes realizar la compra?</h2>
-        <p>1. Desde Internet Explorer, Google Chrome, Mozilla Firefox, Opera, o el navegador que prefiera,
+        <p >1. Desde Internet Explorer, Google Chrome, Mozilla Firefox, Opera, o el navegador que prefiera,
             ingrese a la tienda en la que desea comprar.
             Tenga en cuenta la sección de “Registro” pues la mayoría de tiendas le piden este paso para que pueda
             iniciar el proceso.
@@ -46,18 +48,18 @@
                       <p> 2. Asegúrese de cuál es la forma de pago que va a usar para realizar la transacción (ver recuadro
                 ‘Formas de pago’).
             </p>
-            <p> 3. Inicie la búsqueda de los artículos que desea comprar. Ya sea navegando las secciones de la tienda
+            <p > 3. Inicie la búsqueda de los artículos que desea comprar. Ya sea navegando las secciones de la tienda
                 (Ropa, Zapatos, Tecnología, Hogar, etc.) o usando un término específico en el buscador de la página.
             </p>
-            <p> 4. A medida que encuentre los productos, verá que en cada uno tiene la posibilidad de dar clic en el
+            <p > 4. A medida que encuentre los productos, verá que en cada uno tiene la posibilidad de dar clic en el
                 botón “Agregar al carro”, “Añadir al carrito” o “Agregar a la bolsa”. Hasta aquí solo ha seleccionado lo
                 que le gusta y puede hacer cambios, eliminar un producto del carrito o agregar otros más.
             </p>
-            Por lo general, los productos que usted agregue al carro de compras permanecen allí por 24 horas. Después de
+            <p >  Por lo general, los productos que usted agregue al carro de compras permanecen allí por 24 horas. Después de
             ese tiempo podrían desaparecer del inventario. Esté muy atento si se trata de una oferta que dura un solo
             día para que no pierda la oportunidad.
-
-            <p> 5. Al terminar de escoger y una vez tenga la plena seguridad de que ha conseguido lo que buscaba, puede
+        </p>
+            <p c> 5. Al terminar de escoger y una vez tenga la plena seguridad de que ha conseguido lo que buscaba, puede
                 pagar. Usualmente, al final de la lista de productos de su carro de compras se puede ver un botón de
                 “Pagar”. En este paso deberá llenar un formulario con información personal: nombre, número de documento
                 de identidad, dirección, datos para el envío, datos de facturación.
@@ -95,13 +97,16 @@
 
                 Tenga en cuenta estos cuidados y se dará cuenta que comprar en línea es un método confiable y rápido
                 para que obtener esos productos que tanto quiere.</p>
-        </p>
+        
 
     </section>
 
 
 </body>
-<h2>SANSA BS AS</h2>
+<footer class="pieSansa">
+
+    <h2 class="tituloFooter">SANSA BS AS</h2>
+
 <nav>
     <ul>
 
@@ -112,6 +117,9 @@
 
     </ul>
 </nav>
+<div class="maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
 </footer>
 
 </html>
