--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>SANSAWEBSITE</title>
 </head>
 
 <body>
@@ -63,7 +65,10 @@
         <p> <span>$1500.-</span> </p>
     </section>
 </body>
-<h2>SANSA BS AS</h2>
+<footer class="pieSansa">
+
+    <h2 class="tituloFooter">SANSA BS AS</h2>
+
 <nav>
     <ul>
 
@@ -74,6 +79,8 @@
 
     </ul>
 </nav>
+<div class="maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </footer>
 
 </html>
