--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./estilos/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-       <title>SANSAWEBSITE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./estilos/style.css">
+    <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class= "cabeza">
+    <header class="cabeza">
         <img class="logoSansa" src="./imagenes/logo.jpeg" alt="logo" href="index.html">
 
         <!--Lista Ordenadas con enlaces relativos 
         genero navegabilidad-->
         <nav>
-            <ul class= "listaSecciones">
+            <ul class="listaSecciones">
                 <li><a href="index.html">INICIO</a>
                 </li>
                 <li><a href="./secciones/productos.html">PRODUCTOS</a>
@@ -37,7 +36,7 @@
 
 
     <h1 class="frase">Diva Regia y Costosa</h1>
-    <h2 class = "animate_animated animate__rubberBand">Los Más Vendidos</h2>
+    <h2 class="animate_animated animate__rubberBand">Los Más Vendidos</h2>
 
     <section class="lomasVendido">
 
@@ -61,7 +60,7 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe></article>
-            
+
 </body>
 <footer class="pieSansa">
 
@@ -77,7 +76,9 @@
         </ul>
     </nav>
     <div class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </footer>
 
