--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
+
+
+    <div class="prueba"></div>
 </footer>
 
 </html>
