--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../estilos/style.css">
     <title>SANSAWEBSITE</title>
@@ -39,30 +40,38 @@
 
         <h2> Vestidos</h2>
         <div class="galeriaProductos">
-            <img class="vestidoLali" src="./imgproductos/vestido lali.jpeg" alt="vestidolali"> <br>
+            <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali"> <br>
 
-            <img class="vestidoMandy" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy"> <br>
+            <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy"> <br>
 
-            <img class="vestidoSara" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara"> <br>
+            <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara"> <br>
 
         </div>
         <h2>Remeras</h2>
-        <img class="musHombreras" src="./imgproductos/musculosa hombreras.jpeg" alt="musculosahombreras"> <br>
+        <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg" alt="musculosahombreras"> <br>
         <p> <span>$1500.-</span> </p>
-        <img class="remBatik" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
+        <img class="remBatik" data-aos="fade-left" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
         <p> <span>$1500.-</span> </p>
-        <img class="remKaty" src="./imgproductos/remera katy.jpeg" alt="remerakaty"> <br>
+        <img class="remKaty" data-aos="fade-left" src="./imgproductos/remera katy.jpeg" alt="remerakaty"> <br>
         <p> <span>$1500.-</span> </p>
-        <img class="tIbis" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
+        <img class="tIbis" data-aos="fade-left" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
         <p> <span>$1500.-</span> </p>
         <h2>Shorts</h2>
-        <img class="sMarruecos" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos"> <br>
+        <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos"> <br>
         <p> <span>$1500.-</span> </p>
-        <img class="shortRustico" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
+        <img class="shortRustico" data-aos="flip-left" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
         <p> <span>$1500.-</span> </p>
-        <img class="shortTokio" src="./imgproductos/short tokio.jpeg" alt="shorttokio"> <br>
+        <img class="shortTokio" data-aos="flip-left" src="./imgproductos/short tokio.jpeg" alt="shorttokio"> <br>
         <p> <span>$1500.-</span> </p>
     </section>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+          AOS.init({
+                        offset: 280,
+                        duration: 2500
+                                });
+      </script>
+
 </body>
 <footer class="pieSansa">
 
