inicio de entrega final

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <header class="cabeza">
-        
         <img class="logoSansa" src="./imagenes/logo.jpeg" alt="logo" href="index.html">
 
         <!--Lista Ordenadas con enlaces relativos 
@@ -83,6 +82,7 @@
     </div>
 
 
+    <div class=""></div>
 </footer>
 
 </html>
