aplicando cambios a rama para merge

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./estilos/style.css">
-       <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./estilos/style.css">
+    <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class= "cabeza">
-        
+    <header class="cabeza">
         <img class="logoSansa" src="./imagenes/logo.jpeg" alt="logo" href="index.html">
 
         <!--Lista Ordenadas con enlaces relativos 
         genero navegabilidad-->
         <nav>
-            <ul class= "listaSecciones">
+            <ul class="listaSecciones">
                 <li><a href="index.html">INICIO</a>
                 </li>
                 <li><a href="./secciones/productos.html">PRODUCTOS</a>
@@ -30,50 +30,13 @@
                 </li>
             </ul>
         </nav>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
     </header>
 
     <!--Enlaces Absolutos -->
 
 
     <h1 class="frase">Diva Regia y Costosa</h1>
-    <h2 class = "animate_animated animate__rubberBand">Los Más Vendidos</h2>
+    <h2 class="animate_animated animate__rubberBand">Los Más Vendidos</h2>
 
     <section class="lomasVendido">
 
@@ -97,11 +60,11 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe></article>
-            
-</body>
-<footer>
 
-    <h2>SANSA BS AS</h2>
+</body>
+<footer class="pieSansa">
+
+    <h2 class="tituloFooter">SANSA BS AS</h2>
     <nav>
         <ul>
 
@@ -112,6 +75,14 @@
 
         </ul>
     </nav>
+    <div class="maps">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
+
+    <div class=""></div>
 </footer>
 
 </html>
