--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../estilos/style.css">
-    <title>Document</title>
+    <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header>
+    <header class="cabeza">
         <a href="../index.html">
             <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
         </a>
@@ -33,27 +34,32 @@
     </header>
 
     <h1 class="frase">Diva Regia y Costosa</h1>
-  
-<section>
-    <h2>Donde encontrarnos</h2>
-    <a class="insta" href="https://www.instagram.com/sansa.bsas/">Instagram</a> 
-    <a class="wp"   href="https://api.whatsapp.com/send?phone=1126652234">whatsapp</a>
 
-</section>
+    <section>
+        <h2>Donde encontrarnos</h2>
+        <a class="insta" href="https://www.instagram.com/sansa.bsas/">Instagram</a>
+        <a class="wp" href="https://api.whatsapp.com/send?phone=1126652234">whatsapp</a>
+
+    </section>
 </body>
-<footer>
+<footer class="pieSansa">
 
-    <h2>SANSA BS AS</h2>
+    <h2 class="tituloFooter">SANSA BS AS</h2>
+
     <nav>
         <ul>
-            
+
             <li><a href="../secciones/nosotros.html">NOSOTROS</a>
             </li>
             <li><a href="./secciones/contacto.html">CONTACTO</a>
             </li>
-           
+
         </ul>
     </nav>
+    <div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
 </footer>
 
 </html>
