--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,35 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../estilos/style.css">
     <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class="cabeza">
-        <a href="../index.html">
-            <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
-        </a>
-        <!--Lista Ordenadas con enlaces relativos 
-        genero navegabilidad-->
-        <nav>
-            <ul>
-                <li><a href="../index.html">INICIO</a>
-                </li>
-                <li><a href="../secciones/productos.html">PRODUCTOS</a>
-                </li>
-                <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-                </li>
-                <li><a href="../secciones/contacto.html">CONTACTO</a>
-                </li>
-                <li><a href="../secciones/comprar.html">COMO COMPRAR</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <h1 class="frase">Diva Regia y Costosa</h1>
+    <header class="cabeza"> 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand">
+                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="index.html"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/contacto.html" >Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/comprar.html" >Comprar</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <h1 class="frase">Diva Regia y Costosa</h1>
 
     <section>
         <h2>Donde encontrarnos</h2>
