--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,34 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../estilos/style.css">
     <title>SANSAWEBSITE</title>
 </head>
 
-<body>
-    <header class="cabeza">
-        <a href="../index.html">
-            <img class="logoSansa" src="../imagenes/logo.jpeg" alt="logo">
-        </a>
-
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">INICIO</a>
-                </li>
-                <li><a href="../secciones/productos.html">PRODUCTOS</a>
-                </li>
-                <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-                </li>
-                <li><a href="../secciones/contacto.html">CONTACTO</a>
-                </li>
-                <li><a href="../secciones/comprar.html">COMO COMPRAR</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <header class="cabeza"> 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand">
+              <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="index.html"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html" >Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./comprar.html" >Comprar</a> 
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        
 
     <h1 class="frase">Diva Regia y Costosa</h1>
 
@@ -40,15 +51,19 @@
 
         <h2> Vestidos</h2>
         <div class="galeriaProductos">
-            <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali"> <br>
+            <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali">
+            <br>
 
-            <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy"> <br>
+            <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy">
+            <br>
 
-            <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara"> <br>
+            <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara">
+            <br>
 
         </div>
         <h2>Remeras</h2>
-        <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg" alt="musculosahombreras"> <br>
+        <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg"
+            alt="musculosahombreras"> <br>
         <p> <span>$1500.-</span> </p>
         <img class="remBatik" data-aos="fade-left" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
         <p> <span>$1500.-</span> </p>
@@ -57,7 +72,8 @@
         <img class="tIbis" data-aos="fade-left" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
         <p> <span>$1500.-</span> </p>
         <h2>Shorts</h2>
-        <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos"> <br>
+        <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos">
+        <br>
         <p> <span>$1500.-</span> </p>
         <img class="shortRustico" data-aos="flip-left" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
         <p> <span>$1500.-</span> </p>
@@ -66,11 +82,11 @@
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-          AOS.init({
-                        offset: 280,
-                        duration: 2500
-                                });
-      </script>
+        AOS.init({
+            offset: 280,
+            duration: 2500
+        });
+    </script>
 
 </body>
 <footer class="pieSansa">
