--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -16,26 +16,26 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand">
-                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="index.html"></a>
+                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/productos.html">Productos</a>
+                    <a class="nav-link" href="../secciones/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/contacto.html" >Contacto</a>
+                    <a class="nav-link" href="../secciones/contacto.html" >Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/comprar.html" >Comprar</a>
+                    <a class="nav-link" href="../secciones/comprar.html" >Comprar</a> 
                   </li>
                 </ul>
               </div>
