--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -47,37 +47,47 @@
 
     <h1 class="frase">Diva Regia y Costosa</h1>
 
-    <section>
+    <section class="productos">
 
         <h2> Vestidos</h2>
         <div class="galeriaProductos">
             <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali">
             <br>
-
+            <p> <span>Vestido Lali</span> </p><br>
+            <p> <span>$1500.-</span> </p>
             <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy">
             <br>
-
+            <p> <span>Vestido Mandy</span> </p><br>
+            <p> <span>$1500.-</span> </p>
             <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara">
             <br>
-
+            <p> <span>Vestido Sara</span> </p><br>
+            <p> <span>$1500.-</span> </p>
         </div>
-        <h2>Remeras</h2>
+        <h2>Remeras</h2><br>
         <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg"
             alt="musculosahombreras"> <br>
-        <p> <span>$1500.-</span> </p>
+            <p> <span>Musculosa Hombreras</span> </p><br>
+            <p> <span>$1500.-</span> </p>
         <img class="remBatik" data-aos="fade-left" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
+        <p> <span>Remera Batik</span> </p><br>
         <p> <span>$1500.-</span> </p>
         <img class="remKaty" data-aos="fade-left" src="./imgproductos/remera katy.jpeg" alt="remerakaty"> <br>
+        <p> <span>Remera Katy</span> </p><br>
         <p> <span>$1500.-</span> </p>
         <img class="tIbis" data-aos="fade-left" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
+        <p> <span>Top Ibis</span> </p><br>
         <p> <span>$1500.-</span> </p>
-        <h2>Shorts</h2>
+        <h2>Shorts</h2><br>
         <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos">
         <br>
+        <p> <span>Shor Marruecos</span> </p><br>
         <p> <span>$1500.-</span> </p>
         <img class="shortRustico" data-aos="flip-left" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
+        <p> <span>Short rustico</span> </p><br>
         <p> <span>$1500.-</span> </p>
         <img class="shortTokio" data-aos="flip-left" src="./imgproductos/short tokio.jpeg" alt="shorttokio"> <br>
+        <p> <span>Short Tokio</span> </p><br>
         <p> <span>$1500.-</span> </p>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -91,22 +101,26 @@
 </body>
 <footer class="pieSansa">
 
-    <h2 class="tituloFooter">SANSA BS AS</h2>
+  <h2 class="tituloFooter">SANSA BS AS</h2>
+  <nav class="listaFooter">
+      <ul class="seccionFooter">
 
-    <nav>
-        <ul>
+          <li><a href="./secciones/nosotros.html">NOSOTROS</a>
+          </li>
+          <li><a href="./secciones/contacto.html">CONTACTO</a>
+          </li>
 
-            <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-            </li>
-            <li><a href="./secciones/contacto.html">CONTACTO</a>
-            </li>
+      </ul>
+  </nav>
+  <div class="maps">
+      <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+          width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
 
-        </ul>
-    </nav>
-    <div class="maps">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+  <div class="instagram"></div>
+  <div class="whatsapp"></div>
 </footer>
 
 </html>
