--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -2,73 +2,150 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../estilos/style.css">
-    <title>SANSAWEBSITE</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../estilos/style.css">
+  <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class="cabeza"> 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand">
-                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/contacto.html" >Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/comprar.html" >Comprar</a> 
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <h1 class="frase">Diva Regia y Costosa</h1>
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/comprar.html">Comprar</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <h1 class="frase">Diva Regia y Costosa</h1>
 
-    <section>
-        <h2>Donde encontrarnos</h2>
-        <a class="insta" href="https://www.instagram.com/sansa.bsas/">Instagram</a>
-        <a class="wp" href="https://api.whatsapp.com/send?phone=1126652234">whatsapp</a>
+  
+    <h2 class="donde">Donde encontrarnos</h2>
+    
+    <a class="insta" href="https://www.instagram.com/sansa.bsas/"><img class="logoInsta" src="../imagenes/instagram.png" alt="logoInstagram" width="100" height="100" > </a>
+    <a class="wapp" href="https://api.whatsapp.com/send?phone=1126652234"><img class="logoWapp" src="../imagenes/wapp.png" alt="logoWapp" width="100" height="80"></a>
 
-    </section>
+  
+
+
+
+  <!-- formulario de contacto en html y css -->
+
+  <div class="contact_form">
+
+    <div class="formulario">
+      <h1>Formulario de contacto</h1>
+      <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
+
+
+      <form action="submeter-formulario.php" method="post">
+
+
+        <p>
+          <label for="nombre" class="colocar_nombre">Nombre
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="text" name="introducir_nombre" id="nombre" required="obligatorio"
+            placeholder="Escribe tu nombre">
+        </p>
+
+        <p>
+          <label for="email" class="colocar_email">Email
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+        </p>
+
+        <p>
+          <label for="telefone" class="colocar_telefono">Teléfono
+          </label>
+          <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+        </p>
+
+        <p>
+          <label for="website" class="colocar_website">Sitio web
+          </label>
+          <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
+        </p>
+
+        <p>
+          <label for="asunto" class="colocar_asunto">Asunto
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="text" name="introducir_asunto" id="assunto" required="obligatorio"
+            placeholder="Escribe un asunto">
+        </p>
+
+        <p>
+          <label for="mensaje" class="colocar_mensaje">Mensaje
+            <span class="obligatorio">*</span>
+          </label>
+          <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio"
+            placeholder="Deja aquí tu comentario..."></textarea>
+        </p>
+
+        <button type="submit" name="enviar_formulario" id="enviar">
+          <p>Enviar</p>
+        </button>
+
+        <p class="aviso">
+          <span class="obligatorio"> * </span>los campos son obligatorios.
+        </p>
+
+      </form>
+    </div>
+  </div>
+
 </body>
+
 <footer class="pieSansa">
 
-    <h2 class="tituloFooter">SANSA BS AS</h2>
+  <h2 class="tituloFooter">SANSA BS AS</h2>
+  <nav class="listaFooter">
+    <ul class="seccionFooter">
 
-    <nav>
-        <ul>
+      <li><a href="./secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="./secciones/contacto.html">CONTACTO</a>
+      </li>
 
-            <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-            </li>
-            <li><a href="./secciones/contacto.html">CONTACTO</a>
-            </li>
+    </ul>
+  </nav>
+  <div class="maps">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+      width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
 
-        </ul>
-    </nav>
-    <div>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+
+  <div class=""></div>
 </footer>
 
 </html>
