--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -58,7 +58,7 @@
 
       </strong></p>
 
-    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom">
+    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom" style="width: 100%;">
 
 
   </section>
