--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img class="topIbis" src="./imagenes/top ibis.jpeg" alt="topibis">
     </a>
 
-  </sectiongit>
+  </section>
   <p class="productoVideo"> <strong> En Sansa queremos que tus productos lleguen a vos con la presentación más linda
       posible</strong> </p>
   <article class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/hHwXu7CtPk8"
