agregando un objeto a footer

--- a/secciones/comprar.html
+++ b/secciones/comprar.html
@@ -2,116 +2,118 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../estilos/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>SANSAWEBSITE</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../estilos/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class="cabeza"> 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand">
-                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/contacto.html" >Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../secciones/comprar.html" >Comprar</a> 
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <h1 class="frase">Diva Regia y Costosa</h1>
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/comprar.html">Comprar</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <h1 class="frase">Diva Regia y Costosa</h1>
 
-    <section>
-        <h2>Como podes realizar la compra?</h2>
-        <p>1. Desde Internet Explorer, Google Chrome, Mozilla Firefox, Opera, o el navegador que prefiera,
-            ingrese a la tienda en la que desea comprar.
-            Tenga en cuenta la sección de “Registro” pues la mayoría de tiendas le piden este paso para que pueda
-            iniciar el proceso.
-            Es fácil y podrá beneficiarse con las notificaciones de ofertas y novedades de la tienda que llegarán a su
-            correo electrónico.
+  <section>
+    <h2>Como podes realizar la compra?</h2>
+    <p>1. Desde Internet Explorer, Google Chrome, Mozilla Firefox, Opera, o el navegador que prefiera,
+      ingrese a la tienda en la que desea comprar.
+      Tenga en cuenta la sección de “Registro” pues la mayoría de tiendas le piden este paso para que pueda
+      iniciar el proceso.
+      Es fácil y podrá beneficiarse con las notificaciones de ofertas y novedades de la tienda que llegarán a su
+      correo electrónico.
 
-            <p> 2. Asegúrese de cuál es la forma de pago que va a usar para realizar la transacción (ver recuadro
-                ‘Formas de pago’).
-            </p>
-            <p> 3. Inicie la búsqueda de los artículos que desea comprar. Ya sea navegando las secciones de la tienda
-                (Ropa, Zapatos, Tecnología, Hogar, etc.) o usando un término específico en el buscador de la página.
-            </p>
-            <p> 4. A medida que encuentre los productos, verá que en cada uno tiene la posibilidad de dar clic en el
-                botón “Agregar al carro”, “Añadir al carrito” o “Agregar a la bolsa”. Hasta aquí solo ha seleccionado lo
-                que le gusta y puede hacer cambios, eliminar un producto del carrito o agregar otros más.
-            </p>
-            <p> Por lo general, los productos que usted agregue al carro de compras permanecen allí por 24 horas.
-                Después de
-                ese tiempo podrían desaparecer del inventario. Esté muy atento si se trata de una oferta que dura un
-                solo
-                día para que no pierda la oportunidad.
-            </p>
-            <p c> 5. Al terminar de escoger y una vez tenga la plena seguridad de que ha conseguido lo que buscaba,
-                puede
-                pagar. Usualmente, al final de la lista de productos de su carro de compras se puede ver un botón de
-                “Pagar”. En este paso deberá llenar un formulario con información personal: nombre, número de documento
-                de identidad, dirección, datos para el envío, datos de facturación.
-            </p>
-            <p> En ese formulario o en la siguiente página, tendrá que ingresar los datos de su tarjeta de crédito o le
-                dirán qué debe hacer de acuerdo al modo de pago que haya elegido (en efectivo, con débito, con tarjeta
-                crédito del almacén, etc.). Allí sabrá el total de su compra y los costos de envío. También es probable
-                que la empresa aliada que se encarga del envío ofrezca un número de guía para que usted ingrese a la
-                página, sepa el recorrido de la caja y el tiempo aproximado que tardará en tener los artículos en sus
-                manos.
+      <p> 2. Asegúrese de cuál es la forma de pago que va a usar para realizar la transacción (ver recuadro
+        ‘Formas de pago’).
+      </p>
+      <p> 3. Inicie la búsqueda de los artículos que desea comprar. Ya sea navegando las secciones de la tienda
+        (Ropa, Zapatos, Tecnología, Hogar, etc.) o usando un término específico en el buscador de la página.
+      </p>
+      <p> 4. A medida que encuentre los productos, verá que en cada uno tiene la posibilidad de dar clic en el
+        botón “Agregar al carro”, “Añadir al carrito” o “Agregar a la bolsa”. Hasta aquí solo ha seleccionado lo
+        que le gusta y puede hacer cambios, eliminar un producto del carrito o agregar otros más.
+      </p>
+      <p> Por lo general, los productos que usted agregue al carro de compras permanecen allí por 24 horas.
+        Después de
+        ese tiempo podrían desaparecer del inventario. Esté muy atento si se trata de una oferta que dura un
+        solo
+        día para que no pierda la oportunidad.
+      </p>
+      <p c> 5. Al terminar de escoger y una vez tenga la plena seguridad de que ha conseguido lo que buscaba,
+        puede
+        pagar. Usualmente, al final de la lista de productos de su carro de compras se puede ver un botón de
+        “Pagar”. En este paso deberá llenar un formulario con información personal: nombre, número de documento
+        de identidad, dirección, datos para el envío, datos de facturación.
+      </p>
+      <p> En ese formulario o en la siguiente página, tendrá que ingresar los datos de su tarjeta de crédito o le
+        dirán qué debe hacer de acuerdo al modo de pago que haya elegido (en efectivo, con débito, con tarjeta
+        crédito del almacén, etc.). Allí sabrá el total de su compra y los costos de envío. También es probable
+        que la empresa aliada que se encarga del envío ofrezca un número de guía para que usted ingrese a la
+        página, sepa el recorrido de la caja y el tiempo aproximado que tardará en tener los artículos en sus
+        manos.
 
-                Al finalizar la transacción el sistema le anunciará que fue realizada con éxito y solo deberá esperar la
-                llegada del pedido a su casa u oficina.
+        Al finalizar la transacción el sistema le anunciará que fue realizada con éxito y solo deberá esperar la
+        llegada del pedido a su casa u oficina.
 
-                Formas de pago
+        Formas de pago
 
-                Pago en efectivo: es posible pagar en efectivo en una entidad bancaria con un pin asociado a la compra y
-                que genera el sistema. Algunas tiendas permiten pagos iniciales para separar el producto y el resto lo
-                cobran una vez se entrega el pedido.
+        Pago en efectivo: es posible pagar en efectivo en una entidad bancaria con un pin asociado a la compra y
+        que genera el sistema. Algunas tiendas permiten pagos iniciales para separar el producto y el resto lo
+        cobran una vez se entrega el pedido.
 
-                Con tarjeta del almacén: La mayoría de tiendas ofrecen sus propias tarjetas, como Falabella y Éxito, con
-                las que puede obtener descuentos y beneficios especiales.
+        Con tarjeta del almacén: La mayoría de tiendas ofrecen sus propias tarjetas, como Falabella y Éxito, con
+        las que puede obtener descuentos y beneficios especiales.
 
-                Con tarjeta de crédito: por lo general encontrará que todas las tarjetas se aceptan, Diners, American
-                Express, Visa o Mastercard.
+        Con tarjeta de crédito: por lo general encontrará que todas las tarjetas se aceptan, Diners, American
+        Express, Visa o Mastercard.
 
-                Con cheque: aunque el uso de cheques es cada vez menos común, almacenes como éxito.com usan este medio
-                en su ‘Plan Separe’, con cheques posfechados.
+        Con cheque: aunque el uso de cheques es cada vez menos común, almacenes como éxito.com usan este medio
+        en su ‘Plan Separe’, con cheques posfechados.
 
-                Tarjeta débito: es similar al pago en efectivo, la ventaja es que puede hacerlo en línea. Recuerde que
-                para procesar la transacción usted debe digitar su número de clave principal. Algunos bancos exigen que
-                se digite una “segunda clave” que la misma entidad se encarga de darle para este tipo de transacciones.
-                Los riesgos, como en un cajero automático radican, por ejemplo, en que alguien vea la clave. También
-                deberá prestar mucha atención para que no ingrese a una página falsa.
+        Tarjeta débito: es similar al pago en efectivo, la ventaja es que puede hacerlo en línea. Recuerde que
+        para procesar la transacción usted debe digitar su número de clave principal. Algunos bancos exigen que
+        se digite una “segunda clave” que la misma entidad se encarga de darle para este tipo de transacciones.
+        Los riesgos, como en un cajero automático radican, por ejemplo, en que alguien vea la clave. También
+        deberá prestar mucha atención para que no ingrese a una página falsa.
 
-                Tenga en cuenta estos cuidados y se dará cuenta que comprar en línea es un método confiable y rápido
-                para que obtener esos productos que tanto quiere.</p>
+        Tenga en cuenta estos cuidados y se dará cuenta que comprar en línea es un método confiable y rápido
+        para que obtener esos productos que tanto quiere.</p>
 
 
-    </section>
+  </section>
 
 
 </body>
@@ -119,19 +121,21 @@
 
   <h2 class="tituloFooter">SANSA BS AS</h2>
   <nav class="listaFooter">
-      <ul class="seccionFooter">
+    <ul class="seccionFooter">
+      <li><a href="../index.html">HOME</a>
+      </li>
 
-          <li><a href="./secciones/nosotros.html">NOSOTROS</a>
-          </li>
-          <li><a href="./secciones/contacto.html">CONTACTO</a>
-          </li>
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
+      </li>
 
-      </ul>
+    </ul>
   </nav>
   <div class="maps">
-      <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
-          width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+      width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
 
 
