--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -54,11 +54,11 @@
         Nuestro deposito se encuentra en San miguel el cual también puedes pasar a retirar tus compras.
         No obstante una vez al mes hacemos Showrooms para que puedas pasar y conocernos, disfrutar de descuentos
         exclusivos y una maravillosa experiencia.
-        
+
 
       </strong></p>
 
-    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom" style="width: 100%;">
+    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom">
 
 
   </section>
@@ -68,10 +68,12 @@
   <h2 class="tituloFooter">SANSA BS AS</h2>
   <nav class="listaFooter">
     <ul class="seccionFooter">
-
-      <li><a href="./secciones/nosotros.html">NOSOTROS</a>
+      <li><a href="../index.html">HOME</a>
       </li>
-      <li><a href="./secciones/contacto.html">CONTACTO</a>
+
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
       </li>
 
     </ul>
