--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img class="topIbis" src="./imagenes/top ibis.jpeg" alt="topibis">
     </a>
 
-  </section class= "ytube">
+  </section class="ytube">
   <p class="productoVideo"> <strong> En Sansa queremos que tus productos lleguen a vos con la presentación más linda
       posible</strong> </p>
   <article class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/hHwXu7CtPk8"
@@ -76,10 +76,13 @@
   <nav class="listaFooter">
     <ul class="seccionFooter">
 
+      <li><a href="./secciones/index.html">HOME</a>
+      </li>
       <li><a href="./secciones/nosotros.html">NOSOTROS</a>
       </li>
       <li><a href="./secciones/contacto.html">CONTACTO</a>
       </li>
+
 
     </ul>
 
@@ -89,11 +92,11 @@
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
       width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
-  
 
 
- 
-  
+
+
+
 </footer>
 
 </html>
