--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -46,13 +46,15 @@
   </header>
   <h1 class="frase">Diva Regia y Costosa</h1>
 
-  
-    <h2 class="donde">Donde encontrarnos</h2>
-    
-    <a class="insta" href="https://www.instagram.com/sansa.bsas/"><img class="logoInsta" src="../imagenes/instagram.png" alt="logoInstagram" width="100" height="100" > </a>
-    <a class="wapp" href="https://api.whatsapp.com/send?phone=1126652234"><img class="logoWapp" src="../imagenes/wapp.png" alt="logoWapp" width="100" height="80"></a>
 
-  
+  <h2 class="donde">Donde encontrarnos</h2>
+
+  <a class="insta" href="https://www.instagram.com/sansa.bsas/"><img class="logoInsta" src="../imagenes/instagram.png"
+      alt="logoInstagram" width="100" height="100"> </a>
+  <a class="wapp" href="https://api.whatsapp.com/send?phone=1126652234"><img class="logoWapp" src="../imagenes/wapp.png"
+      alt="logoWapp" width="100" height="80"></a>
+
+
 
 
 
@@ -130,10 +132,12 @@
   <h2 class="tituloFooter">SANSA BS AS</h2>
   <nav class="listaFooter">
     <ul class="seccionFooter">
-
-      <li><a href="./secciones/nosotros.html">NOSOTROS</a>
+      <li><a href="../index.html">HOME</a>
       </li>
-      <li><a href="./secciones/contacto.html">CONTACTO</a>
+
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
       </li>
 
     </ul>
