volviendo atras cambios

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     </a>
 
   </section class="ytube">
-  <p class="productoVideo"> <strong> En Sansa queremos que tus productos lleguen a vos con la mejor presentación</strong> </p>
+  <p class="productoVideo"> <strong> En Sansa queremos que tus productos lleguen a vos con la presentación más linda
+      posible</strong> </p>
   <article class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/hHwXu7CtPk8"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
