nada por agregar

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -44,21 +44,21 @@
       </div>
     </nav>
   </header>
-  <h1 class="frase">Diva Regia y Costosa</h1>
-
-
+  <h1 class="frase">Diva, Regia y Costosa</h1>
+  
   <h2 class="donde">Donde encontrarnos</h2>
 
+  <div class="dondeDiv">
   <a class="insta" href="https://www.instagram.com/sansa.bsas/"><img class="logoInsta" src="../imagenes/instagram.png"
       alt="logoInstagram" width="100" height="100"> </a>
   <a class="wapp" href="https://api.whatsapp.com/send?phone=1126652234"><img class="logoWapp" src="../imagenes/wapp.png"
       alt="logoWapp" width="100" height="80"></a>
+    </div>
 
 
 
 
-
-  <!-- formulario de contacto en html y css -->
+  
 
   <div class="contact_form">
 
@@ -124,7 +124,7 @@
       </form>
     </div>
   </div>
-
+</div>
   <footer class="pieSansa">
 
     <h2 class="tituloFooter">SANSA BS AS</h2>
