--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="./estilos/estilos.css">
+  <meta name="description" content="Sansa es ropa moderna, para que te vistas a la moda con productos de calidad, esta a un click de distancia, enviamos a todo el país">
+  <meta name="keywords" content="moda,elegante,joven,economico,envios,ropa,mujer,girl,estilo,women">
+  <meta name="author" content="LucasHimura">
+  <meta name="copyright" content="LucasHimura">
   <title>SANSAWEBSITE</title>
 </head>
 
